--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <div class="menu">
-            <div class="menu__box">
+            <div class="menu__container">
                 <nav class="menu__navigation">
                     <a href="#" class="menu__navigation-logo"><span>Web</span>Studio</a>
                     <ul class="menu__navigation-list">
@@ -31,7 +31,7 @@
     </header>
     <main>
         <section class="content">
-            <div class="content__box">
+            <div class="content__container">
                 <h1 class="content__title">Effective Solutions for Your Business</h1>
                 <div class="content__form">
                     <button type="button" class="content__form-button">Order Service</button>
@@ -39,7 +39,7 @@
             </div>
         </section>
         <section class="list">
-            <div class="list__box">
+            <div class="list__container">
                 <ul class="list__column">
                     <li class="list__item">
                         <h3 class="list__item-title">Strategy</h3>
@@ -69,7 +69,7 @@
             </div>
         </section>
         <section class="doing">
-            <div class="doing__box">
+            <div class="doing__container">
                 <h2 class="doing__title">What are we doing</h2>
                 <ul class="doing__colmn">
                     <li class="doing__column-item">
@@ -85,7 +85,7 @@
             </div>
         </section>
         <section class="team">
-            <div class="team__box">
+            <div class="team__container">
                 <h2 class="team__title">Our Team</h2>
                 <ul class="team__column">
                     <li class="team__item">
@@ -122,7 +122,7 @@
     </main>
     <footer>
         <div class="footer">
-            <div class="footer__box">
+            <div class="footer__container">
                 <a href="#" class="footer__logo"><span>Web</span>Studio</a>
                 <div class="footer__address">
                     <p class="footer__address-text">Increase the flow of customers and sales for your business with digital
