--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#" class="menu__navigation-logo"><span>Web</span>Studio</a>
                     <ul class="menu__navigation-list">
                         <li><a href="#" class="menu__navigation-item">Studio</a></li>
-                        <li><a href="#" class="menu__navigation-item">Portfolio</a></li>
+                        <li><a href="./portfolio.html" class="menu__navigation-item">Portfolio</a></li>
                         <li><a href="#" class="menu__navigation-item">Contacts</a></li>
                     </ul>
                 </nav>
