--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,106 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <title>WEBSTUDIO</title>
 </head>
 <body>
     
+    <header>
+        <div class="menu">
+            <div class="menu__container">
+                <nav class="menu__navigation">
+                    <a href="#" class="menu__navigation-logo"><span>Web</span>Studio</a>
+                    <ul class="menu__navigation-list">
+                        <li><a href="./index.html" class="menu__navigation-item">Studio</a></li>
+                        <li><a href="#" class="menu__navigation-item">Portfolio</a></li>
+                        <li><a href="#" class="menu__navigation-item">Contacts</a></li>
+                    </ul>
+                </nav>
+                <div class="menu__contacts">
+                    <a href="tel:+110001111111" class="menu__contacts-tel">+11 (000) 111-11-11</a>
+                    <a href="mailto:info@devstudio.com" class="menu__contacts-email">info@devstudio.com</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <section>
+            <div class="portfolio">
+                <div class="portfolio__container">
+                    <div class="portfolio__filter-button">
+                        <ul class="filter-buttons">
+                            <li class="filter-button"><button type="button">All</button></li>
+                            <li class="filter-button"><button type="button">Web Site</button></li>
+                            <li class="filter-button"><button type="button">App</button></li>
+                            <li class="filter-button"><button type="button">Design</button></li>
+                            <li class="filter-button"><button type="button">Marketing</button></li>
+                        </ul>
+                        <ul class="portfolio__card">
+                            <li class="portfolio__item">
+                                <img src="./images/portfolio/app.jpg" width="360" alt="mobile app">
+                                <h2 class="portfolio__title">Banking App Interface Concept</h2>
+                                <p class="portfolio__text">App</p>
+                            </li>
+                            <li class="portfolio__item">
+                                <img src="#" alt="text">
+                                <h2 class="portfolio__title">Cashless Payment</h2>
+                                <p class="portfolio__text">Marketing</p>
+                            </li>
+                            <li class="portfolio__item">
+                                <img src="./images/portfolio/note.jpg" width="360" alt="notebook and phone">
+                                <h2 class="portfolio__title">Meditaion App</h2>
+                                <p class="portfolio__text">App</p>
+                            </li>
+                            <li class="portfolio__item">
+                                <img src="./images/portfolio/taxi.jpg" width="360" alt="hands on the wheel">
+                                <h2 class="portfolio__title">Taxi Service</h2>
+                                <p class="portfolio__text">Marketing</p>
+                            </li>
+                            <li class="portfolio__item">
+                                <img src="./images/portfolio/theme.jpg" width="360" alt="blue theme">
+                                <h2 class="portfolio__title">Screen Illustrations</h2>
+                                <p class="portfolio__text">Design</p>
+                            </li>
+                            <li class="portfolio__item">
+                                <img src="./images/portfolio/girl.jpg" width="360" alt="girl in yellow">
+                                <h2 class="portfolio__title">Online Courses</h2>
+                                <p class="portfolio__text">Marketing</p>
+                            </li>
+                            <li class="portfolio__item">
+                                <img src="./images/portfolio/card.jpg" width="360" alt="instagram stories">
+                                <h2 class="portfolio__title">Instagram Stories Concept</h2>
+                                <p class="portfolio__text">Design</p>
+                            </li>
+                            <li class="portfolio__item">
+                                <img src="./images/portfolio/food.jpg" width="360" alt="food on bag">
+                                <h2 class="portfolio__title">Organic Food</h2>
+                                <p class="portfolio__text">Web Site</p>
+                            </li>
+                            <li class="portfolio__item">
+                                <img src="./images/portfolio/coffe.jpg" width="360" alt="make coffee">
+                                <h2 class="portfolio__title">Fresh Coffee</h2>
+                                <p class="portfolio__text">Web Site</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer">
+            <div class="footer__container">
+                <a href="#" class="footer__logo"><span>Web</span>Studio</a>
+                <div class="footer__address">
+                    <p class="footer__address-text">Increase the flow of customers and sales for your business with digital
+                        marketing & growth solutions.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
