--- a/index.html
+++ b/index.html
@@ -12,125 +12,100 @@
 <body>
 
     <header>
-        <div class="menu">
-            <div class="menu__container">
-                <nav class="menu__navigation">
-                    <a href="#" class="menu__navigation-logo"><span>Web</span>Studio</a>
-                    <ul class="menu__navigation-list">
-                        <li><a href="#" class="menu__navigation-item">Studio</a></li>
-                        <li><a href="./portfolio.html" class="menu__navigation-item">Portfolio</a></li>
-                        <li><a href="#" class="menu__navigation-item">Contacts</a></li>
-                    </ul>
-                </nav>
-                <div class="menu__contacts">
-                    <a href="tel:+110001111111" class="menu__contacts-tel">+11 (000) 111-11-11</a>
-                    <a href="mailto:info@devstudio.com" class="menu__contacts-email">info@devstudio.com</a>
-                </div>
-            </div>
-        </div>
+        <nav class="menu-navigation">
+            <a href="#" class="menu-logo"><span>Web</span>Studio</a>
+            <ul class="menu-list">
+                <li><a href="#" class="menu-item">Studio</a></li>
+                <li><a href="./portfolio.html" class="menu-item">Portfolio</a></li>
+                <li><a href="#" class="menu-item">Contacts</a></li>
+            </ul>
+        </nav>
+        <ul class="menu-contacts">
+            <li><a href="mailto:info@devstudio.com" class="menu-email">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111" class="menu-tel">+11 (000) 111-11-11</a></li>
+        </ul>
     </header>
+
     <main>
         <section class="content">
-            <div class="content__container">
-                <h1 class="content__title">Effective Solutions for Your Business</h1>
-                <div class="content__form">
-                    <button type="button" class="content__form-button">Order Service</button>
-                </div>
-            </div>
+            <h1 class="content-title">Effective Solutions for Your Business</h1>
+            <button type="button" class="content-button">Order Service</button>
         </section>
         <section class="list">
-            <div class="list__container">
-                <ul class="list__column">
-                    <li class="list__item">
-                        <h3 class="list__item-title">Strategy</h3>
-                        <p class="list__item-text">Our goal is to identify the business
-                            problem to walk away with the perfect and creative solution.
-                        </p>
-                    </li>
-                    <li class="list__item">
-                        <h3 class="list__item-title">Punctuality</h3>
-                        <p class="list__item-text">Bring the key message to the brand's audience for the best
-                            price within the shortest possible time.
-                        </p>
-                    </li>
-                    <li class="list__item">
-                        <h3 class="list__item-title">Diligence</h3>
-                        <p class="list__item-text">Research and confirm brands that present the strongest
-                            digital growth opportunities and minimize risk.
-                        </p>
-                    </li>
-                    <li class="list__item">
-                        <h3 class="list__item-title">Technologies</h3>
-                        <p class="list__item-text">Design practice focused on digital experiences. We bring
-                            forth a deep passion for problem-solving.
-                        </p>
-                    </li>
-                </ul>
-            </div>
+            <ul class="list-items">
+                <li class="list-item">
+                    <h3 class="list-title">Strategy</h3>
+                    <p class="list-text">Our goal is to identify the business
+                        problem to walk away with the perfect and creative solution.
+                    </p>
+                </li>
+                <li class="list-item">
+                    <h3 class="list-title">Punctuality</h3>
+                    <p class="list-text">Bring the key message to the brand's audience for the best
+                        price within the shortest possible time.
+                    </p>
+                </li>
+                <li class="list-item">
+                    <h3 class="list-title">Diligence</h3>
+                    <p class="list-text">Research and confirm brands that present the strongest
+                        digital growth opportunities and minimize risk.
+                    </p>
+                </li>
+                <li class="list-item">
+                    <h3 class="list-title">Technologies</h3>
+                    <p class="list-text">Design practice focused on digital experiences. We bring
+                        forth a deep passion for problem-solving.
+                    </p>
+                </li>
+            </ul>
         </section>
         <section class="doing">
-            <div class="doing__container">
-                <h2 class="doing__title">What are we doing</h2>
-                <ul class="doing__colmn">
-                    <li class="doing__column-item">
-                        <img src="./images/devices/pc.jpg" width="360" alt="monitor">
-                    </li>
-                    <li class="doing__column-item">
-                        <img src="./images/devices/phone1.jpg" width="360" alt="phone">
-                    </li>
-                    <li class="doing__column-item">
-                        <img src="./images/devices/phone2.jpg" width="360" alt="phone">
-                    </li>
-                </ul>
-            </div>
+            <h2 class="doing-title">What are we doing</h2>
+            <ul class="doing-items">
+                <li class="doing-item">
+                    <img src="./images/devices/pc.jpg" width="360" alt="monitor">
+                </li>
+                <li class="doing-item">
+                    <img src="./images/devices/phone1.jpg" width="360" alt="phone">
+                </li>
+                <li class="doing-item">
+                    <img src="./images/devices/phone2.jpg" width="360" alt="phone">
+                </li>
+            </ul>
         </section>
         <section class="team">
-            <div class="team__container">
-                <h2 class="team__title">Our Team</h2>
-                <ul class="team__column">
-                    <li class="team__item">
-                        <div class="team__item-photo">
-                            <img src="./images/team/mark.jpg" width="264" alt="mark">
-                        </div>
-                        <h3 class="team__item-name">Mark Guerrero</h3>
-                        <p class="team__item-position">Product Designer</p>
-                    </li>
-                    <li class="team__item">
-                        <div class="team__item-photo">
-                            <img src="./images/team/tom.jpg" width="264" alt="tom">
-                        </div>
-                        <h3 class="team__item-name">Tom Ford</h3>
-                        <p class="team__item-position">Frontend Developer</p>
-                    </li>
-                    <li class="team__item">
-                        <div class="team__item-photo">
-                            <img src="./images/team/camila.jpg" width="264" alt="camila">
-                        </div>
-                        <h3 class="team__item-name">Camila Garcia</h3>
-                        <p class="team__item-position">Marketing</p>
-                    </li>
-                    <li class="team__item">
-                        <div class="team__item-photo">
-                            <img src="./images/team/daniel.jpg" width="264" alt="daniel">
-                        </div>
-                        <h3 class="team__item-name">Daniel Wilson</h3>
-                        <p class="team__item-position">UI Designer</p>
-                    </li>
-                </ul>
-            </div>
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-items">
+                <li class="team-item">
+                    <img src="./images/team/mark.jpg" width="264" alt="mark">
+                    <h3 class="team-name">Mark Guerrero</h3>
+                    <p class="team-position">Product Designer</p>
+                </li>
+                <li class="team-item">
+                    <img src="./images/team/tom.jpg" width="264" alt="tom">
+                    <h3 class="team-name">Tom Ford</h3>
+                    <p class="team-position">Frontend Developer</p>
+                </li>
+                <li class="team-item">
+                    <img src="./images/team/camila.jpg" width="264" alt="camila">
+                    <h3 class="team-name">Camila Garcia</h3>
+                    <p class="team-position">Marketing</p>
+                </li>
+                <li class="team-item">
+                    <img src="./images/team/daniel.jpg" width="264" alt="daniel">
+                    <h3 class="team-name">Daniel Wilson</h3>
+                    <p class="team-position">UI Designer</p>
+                </li>
+            </ul>
         </section>
     </main>
+
     <footer>
-        <div class="footer">
-            <div class="footer__container">
-                <a href="#" class="footer__logo"><span>Web</span>Studio</a>
-                <div class="footer__address">
-                    <p class="footer__address-text">Increase the flow of customers and sales for your business with digital
-                        marketing & growth solutions.
-                    </p>
-                </div>
-            </div>
-        </div>
+        <a href="#" class="footer-logo"><span>Web</span>Studio</a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with
+            digital
+            marketing & growth solutions.
+        </p>
     </footer>
 
 </body>
