--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/styles.css">
     <title>WEBSTUDIO</title>
 </head>
@@ -30,11 +31,11 @@
         <section>
 
             <ul class="filter-buttons">
-                <li class="filter-button"><button type="button">All</button></li>
-                <li class="filter-button"><button type="button">Web Site</button></li>
-                <li class="filter-button"><button type="button">App</button></li>
-                <li class="filter-button"><button type="button">Design</button></li>
-                <li class="filter-button"><button type="button">Marketing</button></li>
+                <li ><button type="button" class="filter-button">All</button></li>
+                <li ><button type="button" class="filter-button">Web Site</button></li>
+                <li ><button type="button" class="filter-button">App</button></li>
+                <li ><button type="button" class="filter-button">Design</button></li>
+                <li ><button type="button" class="filter-button">Marketing</button></li>
             </ul>
             <ul class="portfolio-cards">
                 <li class="portfolio-card">
