--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./CSS/styles.css">
     <title>WEBSTUDIO</title>
 </head>
@@ -31,11 +32,11 @@
         <section>
 
             <ul class="filter-buttons">
-                <li ><button type="button" class="filter-button">All</button></li>
-                <li ><button type="button" class="filter-button">Web Site</button></li>
-                <li ><button type="button" class="filter-button">App</button></li>
-                <li ><button type="button" class="filter-button">Design</button></li>
-                <li ><button type="button" class="filter-button">Marketing</button></li>
+                <li><button type="button" class="filter-button">All</button></li>
+                <li><button type="button" class="filter-button">Web Site</button></li>
+                <li><button type="button" class="filter-button">App</button></li>
+                <li><button type="button" class="filter-button">Design</button></li>
+                <li><button type="button" class="filter-button">Marketing</button></li>
             </ul>
             <ul class="portfolio-cards">
                 <li class="portfolio-card">
@@ -44,7 +45,9 @@
                     <p class="portfolio-text">App</p>
                 </li>
                 <li class="portfolio-card">
-                    <img src="#" alt="text">
+                    <img src="./images/portfolio/square.jpg" width="360" alt="iris square">
+                    <p class="portfolio-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                        Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                     <h2 class="portfolio-title">Cashless Payment</h2>
                     <p class="portfolio-text">Marketing</p>
                 </li>
